Updates price to currency

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,11 +6,11 @@
 <ol>
 <% @products.each do |product| %>
 <li>
-    <%= product.title %> (<%= product.price %>)
+    <%= product.title %> (<%= number_to_currency product.price %>)
 
     <ul>
         <%product.variants.each do |variant| %>
-            <li><%= variant.title %> (<%= variant.price %>)</li>
+            <li><%= variant.title %> (<%= number_to_currency variant.price %>)</li>
         <% end %>
     </ul>
 
